--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -14,23 +14,18 @@ const socialLinks: {
 }[] = [
 	{
 		friendlyName: "Github",
-		link: "https://github.com/zouzonghao",
+		link: "https://github.com/cuichan",
 		name: "mdi:github",
 	},
 	// 修改：添加其他社交平台链接，name 为 /public/icons/ 下的 svg 文件名 下的 svg 文件名
 	{
 		friendlyName: "Bilibili",
-		link: "https://bilibili.com/",
+		link: "https://space.bilibili.com/631266172?spm_id_from=333.788.0.0",
 		name: "bilibili",
 	},
 	{
-		friendlyName: "Nodeseek",
-		link: "https://www.nodeseek.com/",
-		name: "nodeseek",
-	},
-	{
 		friendlyName: "linux.do",
-		link: "https://linux.do/",
+		link: "https://linux.do/u/user1418/summary",
 		name: "linux.do",
 	},
 ];
